--- a/index.html
+++ b/index.html
@@ -1,14 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
+    <meta name="theme-color" content="#020617">
+    <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
     <title>My Timetable - Prakhar Yadav</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800&display=swap"
+        rel="stylesheet">
+    <link rel="icon" type="image/png" href="https://cdn-icons-png.flaticon.com/512/3917/3917244.png">
+    <link rel="apple-touch-icon" href="https://cdn-icons-png.flaticon.com/512/3917/3917244.png">
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
     <!-- Header Section -->
     <header class="header">
@@ -21,11 +28,12 @@
                 </div>
                 <div class="notification-toggle">
                     <button id="enableNotifications" class="btn-notification">
-                        <svg width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                        <svg width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor"
+                            stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
                             <path d="M18 8A6 6 0 0 0 6 8c0 7-3 9-3 9h18s-3-2-3-9"></path>
                             <path d="M13.73 21a2 2 0 0 1-3.46 0"></path>
                         </svg>
-                        Enable Notifications
+                        <span>Enable Notifications</span>
                     </button>
                 </div>
             </div>
@@ -43,10 +51,16 @@
                 <div class="class-info" id="currentClassInfo">
                     <h2 class="class-title" id="currentClassName">No ongoing class</h2>
                     <div class="class-details">
-                        <span class="class-time" id="currentClassTime">-</span>
-                        <span class="class-location" id="currentClassLocation">-</span>
+                        <span class="class-time" id="currentClassTime">
+                            -
+                        </span>
+                        <span class="class-location" id="currentClassLocation">
+                            -
+                        </span>
+                        <span class="class-instructor" id="currentClassInstructor">
+                            -
+                        </span>
                     </div>
-                    <div class="class-instructor" id="currentClassInstructor">-</div>
                 </div>
                 <div class="timer-section" id="timerSection">
                     <div class="timer-label">Time Remaining</div>
@@ -88,4 +102,5 @@
 
     <script src="script.js"></script>
 </body>
+
 </html>
