--- a/index.html
+++ b/index.html
@@ -27,16 +27,7 @@
                     <p class="student-details">ERP: 1000024015 | BTech CSE - AI, ML & Robotics</p>
                     <p class="semester-info">Semester: EVEN 2025-26 | Credits: 21</p>
                 </div>
-                <div class="notification-toggle">
-                    <button id="enableNotifications" class="btn-notification">
-                        <svg width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor"
-                            stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
-                            <path d="M18 8A6 6 0 0 0 6 8c0 7-3 9-3 9h18s-3-2-3-9"></path>
-                            <path d="M13.73 21a2 2 0 0 1-3.46 0"></path>
-                        </svg>
-                        <span>Enable Notifications</span>
-                    </button>
-                </div>
+
             </div>
         </div>
     </header>
@@ -100,6 +91,13 @@
             </div>
         </div>
     </section>
+
+    <footer class="app-footer">
+        <a href="https://blazecodeprakhar.netlify.app/" target="_blank" rel="noopener noreferrer" class="footer-link">
+            <img src="favicon.svg" alt="Logo" class="footer-logo">
+            <span>blazecodeprakhar</span>
+        </a>
+    </footer>
 
     <script src="script.js"></script>
 </body>
